Optimization: Clear selection range (it's moving range) before removing text

BUG:259879

svn path=/trunk/KDE/kdelibs/; revision=1206542